# MetaPlatform

./: --brand-prefix  .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  agent.md  docker-compose.yml  package.json  test-dispatch.js  test_dispatch.ps1
TECH-A2A/: README.md  check_py.py  main.py  pyproject.toml
TECH-A2A/app/: config.py  deps.py
TECH-A2A/app/agent_card/: repository.py  schemas.py  service.py
TECH-A2A/app/agent_registry/: repository.py  schemas.py  service.py
TECH-A2A/app/audit/: repository.py  schemas.py  service.py
TECH-A2A/app/auth/: service.py
TECH-A2A/app/clients/: agent_client.py  agent_service_client.py  wfe_client.py
TECH-A2A/app/common/: api_response.py  context.py  errors.py  jwt_auth.py  middleware.py
TECH-A2A/app/delegation/: repository.py  schemas.py  service.py
TECH-A2A/app/events/: outbox.py  schemas.py
TECH-A2A/app/inbound/: schemas.py  service.py
TECH-A2A/app/messaging/: repository.py  schemas.py  service.py
TECH-A2A/docs/: SPEC-TECH-A2A-A2A适配API规范_v1.0-20260716.md
TECH-A2A/tests/: conftest.py  test_agent_cards.py  test_audit.py  test_auth.py  test_delegations.py  test_inbound.py  test_integration.py  test_messages.py  test_registry.py
TECH-DATA/: README.md  main.py  pyproject.toml
TECH-DATA/app/: config.py  deps.py
TECH-DATA/app/catalog/: __init__.py  schemas.py  service.py
TECH-DATA/app/common/: api_response.py  context.py  crypto.py  errors.py  middleware.py
TECH-DATA/app/dbt/: __init__.py  orm.py  repository.py  schemas.py  service.py
TECH-DATA/app/deliverables/: __init__.py  schemas.py  service.py
TECH-DATA/app/etl/: __init__.py  orm.py  repository.py  schemas.py  service.py
TECH-DATA/app/lakehouse/: __init__.py  orm.py  repository.py  (+2 more)
TECH-DATA/docs/: SPEC-TECH-DATA-数据集成API规范_v1.0-20260716.md
TECH-DATA/tech_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
TECH-DATA/tests/: conftest.py  test_catalog.py  test_controllers.py  test_datasource_service.py  test_dbt.py  test_etl.py  test_lakehouse.py  test_lineage.py  test_monitoring.py  test_quality.py  test_queries.py  test_schema_discovery_service.py  test_warehouse.py
TECH-LLMGW/: README.md  main.py  pyproject.toml
TECH-LLMGW/app/: config.py  deps.py
TECH-LLMGW/docs/: SPEC-TECH-LLMGW-LLM网关API规范_v1.0-20260716.md  SPEC-TECH-LLMGW-LLM网关服务规范_v1.0-20260716.md
TECH-LLMGW/tests/: conftest.py  test_audit.py  test_chat_completions.py  test_chat_service.py  test_code.py  test_context.py  test_controllers.py  test_cost.py  test_embedding_service.py  test_jwt_auth.py  test_model_service.py  test_prompts.py  test_quotas.py  test_rate_limit_runtime.py  test_rate_limits.py  test_routing.py  test_stream_service.py
TECH-ONT/: README.md  pom.xml  pyproject.toml
TECH-ONT/app/: config.py  deps.py  main.py
TECH-ONT/docs/: SPEC-TECH-ONT-本体引擎API规范_v1.0-20260716.md
TECH-ONT/tests/: conftest.py  test_ontology_discovery.py
TECH-RAG/: .gitignore  README.md  main.py  pyproject.toml
TECH-RAG/app/: config.py  deps.py
TECH-RAG/docs/: SPEC-TECH-RAG-RAG引擎API规范_v1.0-20260716.md
TECH-RAG/tests/: conftest.py  test_chunk_service.py  test_citation_service.py  test_context_assembly.py  test_controllers.py  test_document_service.py  test_embedding_service.py  test_event_service.py  test_graph_search.py  test_hybrid_search.py  test_keyword_search_service.py  test_knowledge_base_service.py  test_rerank_and_config.py  test_retrieval_service.py
(+3722 files in other folders)
