[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-a2a"
version = "0.1.0"
description = "Agent-to-Agent Protocol Adapter Service for Mate Platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.*",
    "uvicorn[standard]==0.32.*",
    "pydantic>=2.0",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "PyJWT>=2.8",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
